* Fixed some alignment issues in IE7
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@19510 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenModel/skins/zenmodel/zenoss.css
+++ b/Products/ZenModel/skins/zenmodel/zenoss.css
@@ -742,10 +742,9 @@ a.tablevalues:active {
 }
 
 .temp_filterbox {
-    height: 25px;
+    height: 28px;
     position: absolute;
     right: 50px;
     top: 0px;
     z-index: 2007;
 }
-
